tests/baselines/reference/overloadErrorMatchesImplementationElaboaration(strict=true).errors.txt
overloadErrorMatchesImplementationElaboaration.ts(8,1): error TS2454: Variable 'ea' is used before being assigned.
overloadErrorMatchesImplementationElaboaration.ts(8,12): error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'string'.


==== overloadErrorMatchesImplementationElaboaration.ts (2 errors) ====
    class EventAggregator
    {
        publish(event: string, data?: any): void;
        publish<T>(event: T): void {}
    }
    
    var ea: EventAggregator;
    ea.publish([1,2,3]);
    ~~
!!! error TS2454: Variable 'ea' is used before being assigned.
               ~~~~~~~
!!! error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'string'.
!!! related TS2793 overloadErrorMatchesImplementationElaboaration.ts:4:5: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.